--- a/Ejercicios.html
+++ b/Ejercicios.html
@@ -76,11 +76,11 @@
 
         <nav class="top-nav">
           <ul>
-            <li> <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Home.html"> Inicio  </a> </li>
-            <li> <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Informacion_General.html">Información</a> </li>
-            <li> <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Notas.html"> Notas  </a> </li>
-            <li> <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Ejercicios.html"> Ejercicios</a> </li>
-            <li> <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Enlaces_externos.html"> Links </a> </li>
+            <li> <a href="https://pjhh-ciencias.github.io/ProbabilidadUNO/Home.html"> Inicio  </a> </li>
+            <li> <a href="https://pjhh-ciencias.github.io/ProbabilidadUNO/Informacion_General.html">Información</a> </li>
+            <li> <a href="https://pjhh-ciencias.github.io/ProbabilidadUNO/Notas.html"> Notas  </a> </li>
+            <li> <a href="https://pjhh-ciencias.github.io/ProbabilidadUNO/Ejercicios.html"> Ejercicios</a> </li>
+            <li> <a href="https://pjhh-ciencias.github.io/ProbabilidadUNO/Enlaces_externos.html"> Links </a> </li>
           </ul>
           </nav>
         <!-- 
@@ -97,10 +97,10 @@
     <body class="fondo-body" > <h1 class="page-title"> Ejercicios propuestos</h1>  
 
     <div class="links-box" style = "font-family: 'Oldenburg', cursive;">
-      <a  href="https://pjhh-ciencias.github.io/AnalisisMatematico/Ejercicios/EP1.html"> Ejercicios propuestos primer examen parcial</a>
-      <a  href="https://pjhh-ciencias.github.io/AnalisisMatematico/Ejercicios/EP2.html"> Ejercicios propuestos segundo examen parcial</a>
-      <a  href="https://pjhh-ciencias.github.io/AnalisisMatematico/Ejercicios/EP3.html"> Ejercicios propuestos tercer examen parcial</a>
-      <!-- <a  href="https://pjhh-ciencias.github.io/AnalisisMatematico/Ejercicios/EPO.html"> Ejercicios propuestos examen ordinario</a>  -->
+      <a  href="https://pjhh-ciencias.github.io/ProbabilidadUNO/Ejercicios/EP1.html"> Ejercicios propuestos primer examen parcial</a>
+      <a  href="https://pjhh-ciencias.github.io/ProbabilidadUNO/Ejercicios/EP2.html"> Ejercicios propuestos segundo examen parcial</a>
+      <a  href="https://pjhh-ciencias.github.io/ProbabilidadUNO/Ejercicios/EP3.html"> Ejercicios propuestos tercer examen parcial</a>
+      <!-- <a  href="https://pjhh-ciencias.github.io/ProbabilidadUNO/Ejercicios/EPO.html"> Ejercicios propuestos examen ordinario</a>  -->
     </div>   
   </body>
 </html>
