--- a/Notas/S2.html
+++ b/Notas/S2.html
@@ -74,11 +74,11 @@
 
     <nav class="top-nav">
       <ul>
-        <li> <a href="https://pjhh-ciencias.github.io/CalculoDOS/Home.html"> Inicio  </a> </li>
-        <li> <a href="https://pjhh-ciencias.github.io/CalculoDOS/Informacion_General.html">Información</a> </li>
-        <li> <a href="https://pjhh-ciencias.github.io/CalculoDOS/Notas.html"> Notas  </a> </li>
-        <li> <a href="https://pjhh-ciencias.github.io/CalculoDOS/Ejercicios.html"> Ejercicios</a> </li>
-        <li> <a href="https://pjhh-ciencias.github.io/CalculoDOS/Enlaces_externos.html"> Links </a> </li>
+        <li> <a href="https://pjhh-ciencias.github.io//ProbabilidadUNO//Home.html"> Inicio  </a> </li>
+        <li> <a href="https://pjhh-ciencias.github.io//ProbabilidadUNO//Informacion_General.html">Información</a> </li>
+        <li> <a href="https://pjhh-ciencias.github.io//ProbabilidadUNO//Notas.html"> Notas  </a> </li>
+        <li> <a href="https://pjhh-ciencias.github.io//ProbabilidadUNO//Ejercicios.html"> Ejercicios</a> </li>
+        <li> <a href="https://pjhh-ciencias.github.io//ProbabilidadUNO//Enlaces_externos.html"> Links </a> </li>
       </ul>
       </nav>
     <!-- 
