--- a/Notas.html
+++ b/Notas.html
@@ -103,7 +103,7 @@
       <!-- <h1 class="page-subtitle"></h1>  -->
       <div class="links-box"  style = "font-family: 'Oldenburg', cursive;">
         <a href="https://pjhh-ciencias.github.io/ProbabilidadUNO/Notas/Espacio_muestral.html"> Espacio muestral</a> 
-        <a href="https://pjhh-ciencias.github.io/ProbabilidadUNO/Semanas/S2.html">Semana 2</a> 
+        <a href="https://pjhh-ciencias.github.io/ProbabilidadUNO/Semanas/Espacio_probabilidad.html">Espacio de probabilidad</a> 
         <a href="https://pjhh-ciencias.github.io/CPProgramacion/Semanas/S3.html">Semana 3</a> 
         <a href="https://pjhh-ciencias.github.io/CPProgramacion/Semanas/S4.html">Semana 4</a> 
         <a href="https://pjhh-ciencias.github.io/CPProgramacion/Semanas/S5.html">Semana 5</a> 
