--- a/Notas.html
+++ b/Notas.html
@@ -113,6 +113,7 @@
         <a href="https://pjhh-ciencias.github.io/CPProgramacion/Notas/Teorema_limite_central.html">Teorema del límite Central</a> 
         <a href="https://pjhh-ciencias.github.io/CPProgramacion/Notas/Ley_grandes_numeros.html">Ley de los grandes números</a> 
         <a href="https://pjhh-ciencias.github.io/CPProgramacion/Notas/Distribucion_vectores_aleatorios.html"> Distribución de vectores aleatorios</a> 
+        <a href="https://pjhh-ciencias.github.io/CPProgramacion/Notas/Vectores_gaussianos.html"> Vectores Gaussianos</a> 
 
         
     </div> 
