--- a/Notas/Espacio_muestral.html
+++ b/Notas/Espacio_muestral.html
@@ -173,7 +173,32 @@
     </p>
   </div>
 
+  <div class="nota-box"><h1 class="number-title"> Definición</h1>
+    <p>
+      Sea $\{A_n \}$ una sucesión de eventos de $\Omega$. Se definen los siguientes <b>conjuntos límite</b>
+      \begin{align*}
+      \displaystyle{\limsup A_n}&:=\displaystyle{ \bigcap_{n=1}^\infty \bigcup_{m=n}^\infty A_m}\\
+      &=\{w\in \Omega \colon w \in A_n \text{ para un número infinito de valores de } n \}\\
+      &=\{A_n \text{ i.o.} \}.\\
+      & \\
+      \displaystyle{\liminf A_n } &:=\displaystyle{ \bigcup_{n=1}^\infty \bigcap_{m=n}^\infty A_m}\\
+      &=\{w\in \Omega \colon w \in A_n \text{ para  todos excepto un número finito de valores de } n \}\\
+      &=\{A_n \text{ ult.} \}.
+      \end{align*}
+    </p>
+  </div>
 
+  <div class="nota-box"><h1 class="number-title"> Definición</h1>
+    <p>
+      Sea $\{ A_n\}$ una sucesión de eventos. Se satisfacen:
+    </p>
+    <p>
+      <ol>
+        <li> $\liminf A_n \subseteq \limsup A_n$,</li><br>
+        <li> $\left( \liminf A_n  \right)^{c}=  \limsup \left(A_n\right)^{c}$,</li><br>
+        <li> $\left( \limsup A_n  \right)^{c}=  \liminf \left(A_n\right)^{c}$. </li>
+    </p>
+  </div>
 
 
          
